--- a/www/lib/ionic/scss/_variables.scss
+++ b/www/lib/ionic/scss/_variables.scss
@@ -2,16 +2,27 @@
 // Colors
 // -------------------------------
 
-$light:                           #fff !default;
-$stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
-$calm:                            #11c1f3 !default;
-$balanced:                        #33cd5f !default;
-$energized:                       #ffc900 !default;
-$assertive:                       #ef473a !default;
-$royal:                           #886aea !default;
-$dark:                            #444 !default;
+// $light:                           #fff !default;
+// $stable:                          #f8f8f8 !default;
+// $positive:                        #387ef5 !default;
+// $calm:                            #11c1f3 !default;
+// $balanced:                        #33cd5f !default;
+// $energized:                       #ffc900 !default;
+// $assertive:                       #ef473a !default;
+// $royal:                           #886aea !default;
+// $dark:                            #444 !default;
 
+
+$light:                           #fff !default;
+$stable:                          #EDE6E3 !default;
+$positive:                        #3B8EA5 !default;
+$calm:                            #383B53 !default;
+$balanced:                        #89BD9E !default;
+$energized:                       #FA7921 !default;
+$assertive:                       #8B1E3F !default;
+$royal:                           #3C153B !default;
+$dark:                            #2B303A !default;
+$granite:                         #66717E !default;
 
 // Base
 // -------------------------------
