--- a/www/templates/create-profile.html
+++ b/www/templates/create-profile.html
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col">
                     <h2>Welcome back, {{profile.username}}</h2>
-                    Click <a href="#/app/profile">here</a> to view your profile
+                    Click <a href="#/app/profile">here</a> to view your profile or go to your <a href="#/app/">dashboard</a>.
                 </div>
             </div>
         </div>
