--- a/www/templates/create-proposal.html
+++ b/www/templates/create-proposal.html
@@ -1,37 +1,34 @@
 <ion-view>
   <ion-content>
     <form>
-    <div class="row">
+    <div class="row responsive-sm">
       <div class="col col-100">    
         <h1>Create a New Proposal</h1>
-        </div>
+      </div>
     </div>
-    <div class="row">
-        <div class="col">
+    <div class="row responsive-sm">
+        <div class="col col-20"><h3>Step 1</h3></div>
+        <div class="col col-80">
             <h3>Details</h3>
-                  <label for="proposal-title" class="item item-input">
-                    <span class="input-label">Proposal Title</span>
-                     <input type="text" ng-model="proposal.title" name="proposal-title" id="proposal-title" size="50">
-                    </label>
-                    <label for="proposal-description" class="item item-input">
-                        <span class="input-label">Description</span>
-                        <textarea name="proposal-description" id="proposal-description" ng-model="proposal.description" rows="4" cols="80"></textarea>
-                    </label>
-                     <label for="request-due-date" class="item item-input">
-                        <span class="input-label">Due Date</span>
-                        <input type="date" name="proposal-due-date" id="proposal-due-date" ng-model="proposal.dueDate">
-                    </label>
-                     <label for="request-po-number" class="item item-input">
-                        <span class="input-label">PO Number</span>
-                        <input type="number" name="proposal-po-number" id="proposal-po-number" ng-model="proposal.poNumber">
-                    </label>
-        </div>
-    </div>
-   <div class="row">
-        <div class="col"><h3>Items</h3></div>
-    </div>
-    <div class="row">
-        <div class="col">
+            <label for="proposal-title" class="item item-input item-stacked-label border-none">
+            <span class="input-label">Proposal Title</span>
+                <input type="text" ng-model="proposal.title" name="proposal-title" id="proposal-title" size="50" required>
+            </label>
+            <label for="proposal-description" class="item item-input border-none item-stacked-label">
+                <span class="input-label">Description</span>
+                <textarea style="border: 1px solid #e1e1e1;" name="proposal-description" id="proposal-description" ng-model="proposal.description" rows="4" cols="80" required></textarea>
+            </label>
+                <label for="request-due-date" class="item item-input item-stacked-label border-none">
+                <span class="input-label">Due Date</span>
+                <input type="date" name="proposal-due-date" id="proposal-due-date" ng-model="proposal.dueDate" required>
+            </label>
+                <label for="request-po-number" class="item item-input item-stacked-label border-none">
+                <span class="input-label">PO Number</span>
+                <input type="number" name="proposal-po-number" maxlength="32" id="proposal-po-number" ng-model="proposal.poNumber" required>
+            </label>
+            <h3>Items</h3>
+        <p>Click or tap the button below to add items to your proposal.</p>
+   
                 <ion-item ng-repeat="item in proposal.items">
                     <p>Material Type: <span class="item-note">{{item.materialType}}</span></p>
                     <p>Process: <span class="item-note">{{item.process}}</span></p>
@@ -46,25 +43,13 @@
                     <p>Note:</p>
                     <p>{{item.note}}</p>
                 </ion-item>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <section>
-                <button class="button button-block button-stable" 
-                    ng-click="addItem()">Add Item</button>
-            </section>
-        </div>
-    </div>
-    <div class="row lastRow">
-        <div class="col">
-            <section>
+               
+                <button class="button button-block button-stable" ng-click="addItem()">Add Item</button>
+                 <hr />
                 <a href="#/app/proposals/{{proposal.id}}" 
                     class="button button-block button-positive" 
-                    ng-click="createProposal()">Review and Submit</a>
-            </section>
-        </div>
+                    ng-click="createProposal()">Save and Continue</a>
     </div>
-    </form>
+  </form>
   </ion-content>
 </ion-view>
