--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -7,18 +7,20 @@
   </ion-header-bar>
   <ion-content>
     <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
+      <div class="row responsive-sm">
+      <div class="col">
+        <label class="item item-input item-stacked-label border-none">
           <span class="input-label">Username</span>
           <input type="text" size="10" maxlength="16" ng-model="loginData.username">
         </label>
-        <label class="item item-input">
+        <label class="item item-input item-stacked-label border-none">
           <span class="input-label">Password</span>
           <input type="password" size="10" maxlength="16" ng-model="loginData.password">
         </label>
-        <label class="item">
+        <label class="item item-input border-none">
           <button class="button button-block button-positive" type="submit">Log in</button>
         </label>
+      </div>
       </div>
     </form>
   </ion-content>
